# raytracer

./: .gitignore  CMakeLists.txt  README.md
include/: bounding_box.h  bvh.h  image.h  light.h  ray.h  sample_scenes.h  scene.h  scene_object.h  sphere_object.h  trace.h  triangle_object.h  vec3.h
src/: bounding_box.cpp  bvh.cpp  image.cpp  light.cpp  main.cpp  ray.cpp  sample_scenes.cpp  scene.cpp  scene_object.cpp  sphere_object.cpp  trace.cpp  triangle_object.cpp
